# APS

./: .clang-format  CMakeLists.txt
Labs/01.Adder/: CMakeLists.txt  ViDBo.vc  cla4.sv  fulladder32.sv  tb.cpp  tb_fulladder32.sv  vidbo.cpp
Labs/01.Adder/Nexys/: Nexys.cpp  Nexys.hpp  main.cpp
Labs/01.Adder/Nexys/NexysA7board/: board.ts  main.ts  models.ts  nexys-a7.html  pubsub.ts  tsconfig.json
Labs/01.Adder/ViDBo/: Makefile  tb_ViDBo.cpp
Labs/01.Adder/board_files/: nexys_adder.sv
Labs/02.ALU/: CMakeLists.txt  alu.sv  alu_opcodes_pkg.sv  vidbo.cpp
Nexys/: Nexys.cpp  Nexys.hpp  main.cpp
Nexys/web/: board.ts  nexys-a7.html  nexys-a7.js  tsconfig.json
